<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">




    <Space
        android:layout_width="match_parent"
        android:layout_height="102dp" />


    <FrameLayout
        android:layout_width="365dp"
        android:layout_height="167dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="71dp"
            android:layout_height="61dp"
            app:srcCompat="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="132dp"
            android:layout_height="61dp"
            app:srcCompat="@color/colorPrimary" />


    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="102dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_su_101"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"

            android:text="@string/button_input_1" />

        <Button
            android:id="@+id/button_su_102"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"
            android:text="@string/button_input_2" />

        <Button
            android:id="@+id/button_su_103"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"
            android:text="@string/button_input_3" />

        <Button
            android:id="@+id/button_su_104"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"

            android:text="@string/button_input_4" />

        <Button
            android:id="@+id/button_su_105"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"
            android:text="@string/button_input_5" />

        <Button
            android:id="@+id/button_su_106"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"
            android:text="@string/button_input_6" />

        <Button
            android:id="@+id/button_su_107"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"

            android:text="@string/button_input_7" />

        <Button
            android:id="@+id/button_su_108"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"

            android:text="@string/button_input_8" />

        <Button
            android:id="@+id/button_su_109"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle_green_yellow"

            android:text="@string/button_input_9" />

    </TableRow>

</LinearLayout>
